--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 `piggyback` is basically a poor soul's [git LFS](https://git-lfs.github.com/).  GitHub rejects commits containing files larger than 50 Mb.  `git LFS` is not only expensive, it also [breaks GitHub's collaborative model](https://medium.com/@megastep/github-s-large-file-storage-is-no-panacea-for-open-source-quite-the-opposite-12c0e16a9a91). (Someone wants to submit a PR with a simple edit to your docs, they cannot fork)
 Unlike git LFS, `piggyback` doesn't take over your standard `git` client, it just perches comfortably on the shoulders of your existing GitHub API.  Data can be versioned by `piggyback`, but relative to `git LFS` versioning is less strict: uploads can be set as a new version or allowed to overwrite previously uploaded data.  `piggyback` works with both public and private repositories.  
 
-`piggyback` is inspired by [datastorr](https://github.com/ropenscilabs/datastorr) from [@richfitz](http://github.com/richfitz). While `datastorr` provides your data in the R "data package" model of `storr` (your data lives inside an R package that you install and is automatically loaded into memory), `piggyback` tries to immitate the LFS model where your data files are simply stored as part of your repository.  This impementation uses R wrappers to the GitHub API, but an identical client could be implemented in any language with bindings to the GitHub API. 
+`piggyback` is inspired by [datastorr](https://github.com/ropenscilabs/datastorr) from [\@richfitz](http://github.com/richfitz). While `datastorr` provides your data in the R "data package" model of `storr` (your data lives inside an R package that you install and is automatically loaded into memory), `piggyback` tries to immitate the LFS model where your data files are simply stored as part of your repository.  This impementation uses R wrappers to the GitHub API, but an identical client could be implemented in any language with bindings to the GitHub API. 
 
 `piggyback` is designed around two possible workflows: (1) A high-level workflow that parallels `git lfs`, and (2) a simple interface for directly uploading and downloading individual data files to a GitHub release.
 
