--- a/README.Rmd
+++ b/README.Rmd
@@ -73,17 +73,23 @@ pb_download("cboettig/piggyback", dest="data/")
 
 ## Uploading data
 
-If your GitHub repository doesn't have any [releases](https://help.github.com/articles/creating-releases/) yet, `piggyback` will help you quickly create one.  Create new releases to manage multiple versions of a given data file.  
+If your GitHub repository doesn't have any [releases](https://help.github.com/articles/creating-releases/) yet, `piggyback` will help you quickly create one.  Create new releases to manage multiple versions of a given data file. While you can create releases as often as you like, making a new release is by no means necessary each time you upload a file.  If maintaining old versions of the data is not useful, you can stick with a single release and upload all of your data there.  
+
+```{r}
+gh_new_release("cboettig/piggyback", "v0.0.1")
+```
+
+Once we have at least one release available, we are ready to upload.  By default, `pb_upload` will attach data to the latest release.  
 
 ```{r eval=FALSE}
-## Some test data to upload
+## We'll need some example data first.
+## Pro tip: compress your tabular data to save space & speed upload/downloads
 readr::write_tsv(mtcars, "mtcars.tsv.gz")
 
-gh_new_release("cboettig/piggyback", "v0.0.4")
 pb_upload("cboettig/piggyback", "mtcars.tsv.gz")
 ```
 
-Note that you can also simply overwrite the a previous version of the file on an existing release, rather than creating a new release every time:
+You can also simply overwrite the a previous version of the file on an existing release, rather than creating a new release every time:
 
 ```{r}
 pb_upload("cboettig/piggyback", "mtcars.tsv.gz")
@@ -98,8 +104,10 @@ For an even simpler way to sync data files to GitHub, `piggyback` provides LFS-l
 
 ```{r}
 # Not implemented yet
-pb_pull("data/")
-pb_push("data/")
+pb_track("*.tsv.gz")
+
+pb_pull()
+pb_push()
 ```
 
 This assumes we are working in a directory that is part of the relevant GitHub repository (i.e. the `repo` field is detected based on the `git` remote address for the current working directory.)  By default this uses the latest available release of the currently active GitHub repository. Specify a particular data release tag with the optional argument, `tag`. Data files can be specified by giving a path to a directory where data files are stored on the repo.  Alternately, file paths or types can be specified in a configuration file, see `pb_watch()`.  Identical files will not be transferred. 
@@ -107,7 +115,9 @@ This assumes we are working in a directory that is part of the relevant GitHub r
 *Developer note*: GitHub API does not report hashes for files.  We will have to upload a metadata file to the release that provides these hashes.  Also could consider using git commit hook with these?
 
 
-## Data archiving
+## A Note on GitHub Releases vs Data Archiving
 
-`piggyback` is not intended as a data archiving solution.  Permanent, published data should be archived in a proper data repository with a DOI.  `piggyback` is meant only to lower the friction of working with data during the research process.
+`piggyback` is not intended as a data archiving solution.  Importantly, bare in mind that there is nothing special about multiple "versions" in releases, as far as data assets uploaded by `piggyback` are concerned.  The data files `piggyback` attaches to a Release can be deleted or modified at any time -- creating a new release to store data assets is the functional equivalent of just creating new directories `v0.1`, `v0.2` to store your data.  (GitHub Releases are always pinned to a particular `git` tag, so the code/git-managed contents associated with repo are more immutable, but remember our data assets just piggyback on top of the repo).  
+
+Permanent, published data should always be archived in a proper data repository with a DOI, such as [zenodo.org](https://zenodo.org). Zenodo can freely archive public research data files up to 50 GB in size, and data is strictly versioned (once released, a DOI always refers to the same version of the data, new releases are given new DOIs). `piggyback` is meant only to lower the friction of working with data during the research process.  (e.g. provide data accessible to collaborators or continuus integration systems during research process, including for private repositories.)
 
